Add colors variable

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,2 +1,9 @@
 /* font-family: 'Roboto', sans-serif;
 font-family: 'Revalia', cursive; */
+
+:root{
+  --accent-color: #34547A;
+  --bg-color: #EEEFF1;
+  --light-color: #FFFFFF;
+  --dark-color: #000000;
+}
