--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,14 @@
-/* font-family: 'Revalia', cursive; */
-
 :root{
   --accent-color: #34547A;
   --bg-color: #EEEFF1;
   --light-color: #FFFFFF;
   --dark-color: #000000;
   font-size: 14px;
+  font-weight: 400;
   font-family: 'Roboto', sans-serif;
+}
+.align-center{
+  align-items:center;
 }
 
 @media screen and (min-width: 768px) {
