--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -28,6 +28,7 @@
 .nav-list-item-link{
   display: inline-block;
   padding: 1rem;
+  text-transform: uppercase;
 }
 .nav-list-item-link:hover,
 .nav-list-item-link:focus,
