--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
   --bg-color: #EEEFF1;
   --light-color: #FFFFFF;
   --dark-color: #000000;
+  --text-color: #727272;
   font-size: 14px;
   font-weight: 400;
   font-family: 'Roboto', sans-serif;
@@ -10,7 +11,31 @@
 .align-center{
   align-items:center;
 }
-
+.bg-full{
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  background-color: var(--bg-color);
+}
+.content{
+  margin: 3rem 0;
+  color: var(--text-color);
+  line-height: 1.6;
+}
+.btn{
+  max-width: 250px;
+  padding: 1.7rem 3rem;
+  background-color: var(--accent-color);
+  color:var(--light-color);
+  letter-spacing: 0.1em;
+}
+.btn:focus{
+  box-shadow: 1px 1px 2px #555;
+}
+.overflow{
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis; 
+}
 @media screen and (min-width: 768px) {
   :root{
     font-size: 16px;
