add h2 and new block about me

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,8 @@
   font-weight: 400;
   font-family: 'Roboto', sans-serif;
 }
-.align-center{
+
+.align-center {
   align-items:center;
 }
 .bg-full{
@@ -37,6 +38,25 @@
   white-space: nowrap;
   text-overflow: ellipsis; 
 }
+
+.about-user {
+  margin: 6.06rem 0 ;
+  display: block;
+  text-align: center;
+
+}
+.title-div{
+  font-size: 2rem;
+  font-weight: 500;
+}
+.p-div-about{
+  margin-top: 3.31rem;
+  text-align: center;
+  line-height: 1.6;
+  color:var(--text-color);
+  
+}
+
 
 @media screen and (min-width: 768px) {
   :root{
