--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@
   background-color: var(--accent-color);
   color:var(--light-color);
   letter-spacing: 0.1em;
+  text-transform: uppercase;
 }
 .btn:focus{
   box-shadow: 1px 1px 2px #555;
