--- a/assets/css/achievement.css
+++ b/assets/css/achievement.css
@@ -1,6 +1,13 @@
 .achievement{
   width: 100%;
   background-color: var(--accent-color);
-  height: 250px;
+  /* height: 250px; */
 }
 .achievement-wrapper{}
+.legend{
+  width: 50px;
+  height: 50px;
+}
+.column{
+
+}
