--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,61 +1,61 @@
-:root{
-  --accent-color: #34547A;
-  --bg-color: #EEEFF1;
-  --light-color: #FFFFFF;
+:root {
+  --accent-color: #34547a;
+  --bg-color: #eeeff1;
+  --light-color: #ffffff;
   --dark-color: #000000;
   --text-color: #727272;
   --row-visible-count: 2;
   font-size: 14px;
   font-weight: 400;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
-.align-center{
-  align-items:center;
+.align-center {
+  align-items: center;
 }
-.bg-full{
+.bg-full {
   padding-top: 4rem;
   padding-bottom: 4rem;
   background-color: var(--bg-color);
 }
-.content{
+.content {
   margin: 3rem 0;
   color: var(--text-color);
   line-height: 1.6;
 }
-.btn{
+.btn {
   max-width: 250px;
   padding: 1.7rem 3rem;
   background-color: var(--accent-color);
-  color:var(--light-color);
+  color: var(--light-color);
   letter-spacing: 0.1em;
 }
-.btn:focus{
+.btn:focus {
   box-shadow: 1px 1px 2px #555;
 }
-.overflow{
+.overflow {
   overflow: hidden;
   white-space: nowrap;
-  text-overflow: ellipsis; 
+  text-overflow: ellipsis;
 }
 
 @media screen and (min-width: 768px) {
-  :root{
+  :root {
     font-size: 15px;
   }
-  .rows-overflow{
+  .rows-overflow {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: var(--row-visible-count);
-    max-height: calc(1.6rem*var(--row-visible-count));
-    overflow: hidden;  
+    max-height: calc(1.6rem * var(--row-visible-count));
+    overflow: hidden;
   }
 }
 @media screen and (min-width: 992px) {
-  :root{
+  :root {
     font-size: 16px;
   }
-  .rows-overflow{
+  .rows-overflow {
     display: block;
-    overflow: visible;  
+    overflow: visible;
   }
 }
