Add style & grid in projects block

--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -15,6 +15,7 @@ xxl: 1400px */
 .row {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 .row > * {
   padding: 0 var(--indent-size);
