Final achievement.css

--- a/assets/css/achievement.css
+++ b/assets/css/achievement.css
@@ -1,13 +1,31 @@
 .achievement{
   width: 100%;
   background-color: var(--accent-color);
-  /* height: 250px; */
+  padding: 5rem;
+
 }
-.achievement-wrapper{}
 .legend{
   width: 50px;
   height: 50px;
 }
-.column{
+.achievement-text{
+  display: inline-block;
+  color: var(--light-color);
+  transform: translateY(0.7rem);
+}
+.box{
+  display: inline;
 
+}
+.medium{
+  font-size: 1.3rem;
+  font-weight: 500;
+}
+.regular{
+  font-size: 1rem;
+  font-weight: 400;
+}
+.medium,
+.regular{
+  margin-left: 0.5rem;
 }
