Fix margin top achievement section

--- a/assets/css/achievement.css
+++ b/assets/css/achievement.css
@@ -9,7 +9,7 @@
 }
 .description{
   display: inline-block;
-  margin: 0.5rem;
+  margin: 1rem 0.5rem;
   transform: translateY(0.5rem);
   color: white;
 }
